tests/ui/nll/issue-47470.stderr
error[E0515]: cannot return reference to local variable `local`
  --> $DIR/issue-47470.rs:15:9
   |
LL |         &local
   |         ^^^^^^ returns a reference to data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
